<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    android:id="@+id/activity_forgot_password"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:background="@drawable/homeimage"
    tools:context="com.seals.shubham.placementportalvolley.ForgotPassword">

    <LinearLayout
        android:layout_width="460dp"
        android:layout_height="280dp"
        android:layout_marginTop="60dp"
        android:background="#365600ab"
        android:orientation="vertical"
    >
        <TextView
            android:layout_width="350dp"
            android:id="@+id/frgt_Msg"
            android:layout_height="wrap_content"
            android:padding="10dp"
            android:text="@string/Forget_Password_hint"
            android:textColor="#369abc"
            android:textSize="19sp"
        />
        <EditText
            android:id="@+id/frgt_Reg_Id"
            android:layout_width="300dp"
            android:layout_height="60dp"
            android:layout_gravity="center"
            android:layout_marginTop="15dp"
            android:hint="@string/hint_reg_id"
            android:padding="10dp"
            android:background="@drawable/shape_button"
            android:textColor="#ff9900"
            android:inputType="textCapWords"
            android:textColorHint="@color/colorAccent"
        />
        <Button
            android:id="@+id/frgt_btn_Sub"
            android:layout_width="wrap_content"
            android:layout_height="40dp"
            android:background="@drawable/shapred"
            android:text="@string/Btn_Submit"
            android:layout_marginTop="20dp"
            android:layout_gravity="center"
        />
        <Button
            android:id="@+id/frgt_btn_resend"
            android:layout_width="wrap_content"
            android:layout_height="40dp"
            android:layout_marginTop="10dp"
            android:layout_gravity="center"
            android:background="@drawable/shapred"
            android:text="@string/Btn_ReSend"
            android:visibility="invisible"
        />
    </LinearLayout>
    <Button
        android:id="@+id/frgt_back_login"
        android:layout_width="wrap_content"
        android:layout_height="50dp"
        android:text="@string/back_to_login"
        android:background="@null"
        android:textColor="#ffffcd"
        android:textStyle="italic"
        android:textAllCaps="false"
        android:textSize="20dp"
        android:layout_alignParentBottom="true"
        android:layout_alignParentStart="true"
        android:layout_marginStart="93dp"
        android:layout_marginBottom="48dp"/>

</RelativeLayout>
