<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    android:id="@+id/activity_password_reset"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:background="@drawable/homeimage"
    tools:context="com.seals.shubham.placementportalvolley.PasswordReset">

    <LinearLayout
        android:layout_width="350dp"
        android:layout_height="240dp"
        android:background="#365600ab"
        android:orientation="vertical"
        android:layout_marginTop="60dp" android:weightSum="1">

        <EditText
            android:id="@+id/PassResetFir"
            android:layout_width="320dp"
            android:layout_height="40dp"
            android:layout_gravity="center"
            android:paddingLeft="15dp"
            android:paddingRight="15dp"
            android:maxLines="1"
            android:inputType="textPassword"
            android:hint="@string/Pass_Reset_hint"
            android:background="@drawable/shape_button"
            android:textColorHint="@color/colorAccent"
            android:textColor="#ff9900"
            android:layout_marginTop="20dp"/>

        <CheckBox
            android:id="@+id/PassResetChckBox"
            android:layout_width="wrap_content"
            android:layout_height="20dp"
            android:layout_marginTop="5dp"
            android:layout_marginStart="7dp"
            android:text="@string/show_pass"
            android:textAllCaps="false"
        />
        <EditText
            android:id="@+id/PassResetCnfPass"
            android:layout_width="320dp"
            android:layout_height="40dp"
            android:layout_gravity="center"
            android:paddingLeft="15dp"
            android:maxLines="1"
            android:paddingRight="15dp"
            android:inputType="textPassword"
            android:hint="@string/Pass_Reset_hint_confirm"
            android:background="@drawable/shape_button"
            android:textColorHint="@color/colorAccent"
            android:textColor="#ff9900"
            android:layout_marginTop="10dp"/>

        <Button
            android:id="@+id/btn_Pass_Reset_Chnge"
            android:layout_width="wrap_content"
            android:layout_height="40dp"
            android:layout_gravity="center"
            android:hint="@string/btn_password_reset"
            android:background="@drawable/shapred"
            android:layout_marginTop="20dp"/>

    </LinearLayout>
</RelativeLayout>
